--- a/website/templates/website/partners.html
+++ b/website/templates/website/partners.html
@@ -44,9 +44,9 @@
                         <div class="about-two__right-item">
                             <div class="section-header mb-4">
                                 <h5 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"><img
-                                        src="{% static 'images/icon/leaf.svg' %}" alt="image"> protecting nature</h5>
-                                <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">Protecting Nature
-                                    By Proper Waste Management!g</h2>
+                                        src="{% static 'images/icon/leaf.svg' %}" alt="image"> our partner programs</h5>
+                                <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit,</h2>
                                 <p class="wow fadeInUp" data-wow-duration="1.6s" data-wow-delay=".6s">Quis ipsum
                                     suspendisse ultrices gravida. Risus commodo viverra. Lorem ipsum dolor sit amet,
                                     consectetur adipiscing elit,
@@ -58,13 +58,13 @@
                                 <div class="col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
                                     <div class="d-flex align-items-center">
                                         <img src="{% static 'images/about/about-info1.png' %}" alt="image">
-                                        <h4 class="ml-20">Recycle Plastic</h4>
+                                        <h4 class="ml-20">Lorem Ipsum</h4>
                                     </div>
                                 </div>
                                 <div class="col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
                                     <div class="d-flex align-items-center">
                                         <img src="{% static 'images/about/about-info2.png' %}" alt="image">
-                                        <h4 class="ml-20">Wastage Management</h4>
+                                        <h4 class="ml-20">Lorem Ipsum</h4>
                                     </div>
                                 </div>
                             </div>
@@ -81,14 +81,14 @@
                             </ul>
                             <div class="about_info d-flex align-items-center pt-60 wow fadeInUp"
                                 data-wow-duration="1.9s" data-wow-delay=".9s">
-                                <a href="about.html" class="btn-one"><span>More About us</span> <i
+                                <a href="about.html" class="btn-one"><span>Learm More</span> <i
                                         class="fa-solid fa-angles-right"></i></a>
                                 <span class="bor-left d-none d-sm-block mx-4"></span>
                                 <div class="info d-flex flex-wrap align-items-center">
                                     <i class="fa-solid fa-phone-volume ring-animation"></i>
                                     <div class="about_info_con">
                                         <span class="d-block text-capitalize">call any time</span>
-                                        <a href="tel:+912659302003">+91 2659 302 003</a>
+                                        <a href="tel:+912659302003">+254 712 345 678</a>
                                     </div>
                                 </div>
                             </div>
@@ -106,31 +106,31 @@
                     <div class="col-lg-5 achievement__bor-right wow fadeInUp" data-wow-duration="1.2s"
                         data-wow-delay=".2s">
                         <div class="achievement__item">
-                            <h2 class="text-white pt-3 pb-3">Our trees
-                                have been monitored</h2>
+                            <h2 class="text-white pt-3 pb-3">Our trusted 
+                                partners</h2>
                         </div>
                     </div>
                     <div class="col-lg-2 achievement__bor-right wow fadeInUp" data-wow-duration="1.4s"
                         data-wow-delay=".4s">
                         <div class="achievement__item text-center">
                             <img src="{% static 'images/icon/achieve1.png' %}" alt="icon">
-                            <h5>Trees planted</h5>
-                            <span class="count">6,472,068</span>
+                            {% comment %} <h5>Trees planted</h5>
+                            <span class="count">6,472,068</span> {% endcomment %}
                         </div>
                     </div>
                     <div class="col-lg-2 achievement__bor-right wow fadeInUp" data-wow-duration="1.6s"
                         data-wow-delay=".6s">
                         <div class="achievement__item text-center">
                             <img src="{% static 'images/icon/achieve2.png' %}" alt="icon">
-                            <h5>Families helped</h5>
-                            <span class="count">38,768</span>
+                            {% comment %} <h5>Families helped</h5>
+                            <span class="count">38,768</span> {% endcomment %}
                         </div>
                     </div>
                     <div class="col-lg-2 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
                         <div class="achievement__item text-center">
                             <img src="{% static 'images/icon/achieve3.png' %}" alt="icon">
-                            <h5>CO2 captured (tonne)</h5>
-                            <span class="count">1,193,210</span>
+                            {% comment %} <h5>CO2 captured (tonne)</h5>
+                            <span class="count">1,193,210</span> {% endcomment %}
                         </div>
                     </div>
                 </div>
@@ -143,8 +143,8 @@
             <div class="container">
                 <div class="section-header text-center">
                     <h5 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"><img
-                            src="{% static 'images/icon/leaf.svg' %}" alt="image"> OUR TEAM MEMBERS</h5>
-                    <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">foresty awesome team</h2>
+                            src="{% static 'images/icon/leaf.svg' %}" alt="image"> OUR INVESTORS </h5>
+                    <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">green AI investors</h2>
                 </div>
                 <div class="row g-4">
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">
@@ -173,8 +173,8 @@
                                     <a href="#0"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
                             </div>
-                            <h3><a href="team-single.html">Bonnie J. Britt</a></h3>
-                            <span>Forest Officer</span>
+                            {% comment %} <h3><a href="team-single.html">Bonnie J. Britt</a></h3>
+                            <span>Forest Officer</span> {% endcomment %}
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.6s" data-wow-delay=".6s">
@@ -188,8 +188,8 @@
                                     <a href="#0"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
                             </div>
-                            <h3><a href="team-single.html">Francis A. Cote</a></h3>
-                            <span>Garden Maker</span>
+                            {% comment %} <h3><a href="team-single.html">Francis A. Cote</a></h3>
+                            <span>Garden Maker</span> {% endcomment %}
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
@@ -203,8 +203,8 @@
                                     <a href="#0"><i class="fa-brands fa-youtube"></i></a>
                                 </div>
                             </div>
-                            <h3><a href="team-single.html">Mario L. Lawhorn</a></h3>
-                            <span>Co - Founder</span>
+                            {% comment %} <h3><a href="team-single.html">Mario L. Lawhorn</a></h3>
+                            <span>Co - Founder</span> {% endcomment %}
                         </div>
                     </div>
                 </div>
